Add mailing functionality and base templates

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,8 @@
 <form name="input" action="http://localhost:3000/submit/" method="post">
 
-Name: <input type="text" name="name" />
+<label for="name">Full Name</label><input placeholder="Who are you?" type="text" name="name" />
+<label for="others">Who will be your guest(s)?</label><textarea placeholder="List the names of any invited guests or children that will accompany you." name="others"></textarea>
+<label for="notes">Notes</label><textarea placeholder="Is there anything else we should know?" name="notes"></textarea>
+
 
 <input type="submit" value="Login" />
