--- a/app/views/rsvp_mailer/rsvp_email.html.erb
+++ b/app/views/rsvp_mailer/rsvp_email.html.erb
@@ -5,6 +5,12 @@
   </head>
   <body>
     <h1>RSVP Received</h1>
-    <p>Someone just submitted an RSVP!</p>
+    <p><%= @name %> just submitted an RSVP!</p>
+    <p>They will be coming with:<br/>
+		<%= @others %>
+    </p>
+    <p>Notes:<br/>
+		<%= @notes %>
+    </p>
   </body>
 </html>
