--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<form name="input" action="http://localhost:3000/submit/" method="post">
+<form name="input" action="/submit/" method="post">
 
 <label for="name">Full Name</label><input placeholder="Who are you?" type="text" name="name" />
 <label for="others">Who will be your guest(s)?</label><textarea placeholder="List the names of any invited guests or children that will accompany you." name="others"></textarea>
