--- a/app/views/rsvp_mailer/rsvp_email.html.erb
+++ b/app/views/rsvp_mailer/rsvp_email.html.erb
@@ -5,13 +5,13 @@
   </head>
   <body>
     <h1>RSVP from <%= @name %></h1>
-    <p>RSVP Submitted by:<br/>
+    <p><strong>RSVP Submitted by:</strong><br/>
     	<%= @name %>
     </p>
-    <p>They will be coming with:<br/>
+    <p><strong>They will be coming with:</strong><br/>
 		<%= @others %>
     </p>
-    <p>Notes:<br/>
+    <p><strong>Notes:</strong><br/>
 		<%= @notes %>
     </p>
   </body>
