--- a/app/views/static_pages/submit.html.erb
+++ b/app/views/static_pages/submit.html.erb
@@ -1,1 +1,3 @@
-Submitted!
+<div class="text-center well span8 offset2"> 
+	<h5>Your RSVP has been submitted!  If you need to make a correction, <%= link_to "go back to the form", root_path %> and submit it again</h5>
+	</div>
