--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,8 @@
   <%= label_tag :name %>
   <%= text_field_tag :name, params[:name], placeholder: "Who are you?", class: "span8" %>
   
-  <%= label_tag :others, "Who will be your guest(s)?" %>
-  <%= text_area_tag :others, params[:others], placeholder: "List the names of any invited guests or children that will accompany you.", class: "span8", rows: 5 %>
+  <%= label_tag :others, "Will any invited guests not be able to make it?" %>
+  <%= text_area_tag :others, params[:others], placeholder: "List the names of any invited guests that will not be joining you.", class: "span8", rows: 5 %>
 	
 	<%= label_tag :notes %>
   <%= text_area_tag :notes, params[:notes], placeholder: "Is there anything else we should know?", class: "span8", rows: 3 %>
