Testing different background

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
   <%= text_area_tag :others, params[:others], placeholder: "List the names of other invitees who will be able to come to the party.", class: "span8", rows: 5 %>
 	
 	<%= label_tag :notes %>
-  <%= text_area_tag :notes, params[:notes], placeholder: "Is there anything else we should know?", class: "span8", rows:  %>
+  <%= text_area_tag :notes, params[:notes], placeholder: "Is there anything else we should know?", class: "span8", rows: 3 %>
 
 
   <div class="submit-button">
