Add map and fix plaintext email template

--- a/app/views/rsvp_mailer/rsvp_email.text.erb
+++ b/app/views/rsvp_mailer/rsvp_email.text.erb
@@ -1,3 +1,11 @@
-Someone just submitted an RSVP!
+*** RSVP from <%= @name %> ***
 
-Really, they did!
+
+RSVP Submitted by:
+  <%= @name %>
+
+They will be coming with:
+	<%= @others %>
+  
+Notes:
+	<%= @notes %>
