--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -32,9 +32,7 @@
   	
   	<%= label_tag :notes %>
     <%= text_area_tag :notes, params[:notes], placeholder: "Is there anything else we should know?", class: "span8", rows: 3 %>
-
-
-    <div class="submit-button">
+    <div class="submit-button row">
       <%= submit_tag "RSVP Me!", class: "btn btn-custom btn-large pull-right" %>
     </div>
   <% end %>
